# Uno

./: .gitignore  CONTRIBUTING.md  MANIFESTO.md  PROTOCOL_SCHEMA_V1.md  README.md  README_RUN.md  UNO_V1_FOUNDATION.md  pyproject.toml
docs/: ARCHITECTURE_LAYER1.md  architecture.md
examples/: README.md  demo_build_manifest.json  demo_bundle.json  demo_bundle_witnessed.json  manual_build_manifest.json  manual_bundle.json
examples/demo_state/: agent.json  continuity_events.json  lineage_links.json  witness_receipts.json
examples/demo_witness_state/: witness.json
examples/demo_witness_state/receipts/: 00-uno:event:49c877ea13074998b99ede720c08e758--event.json  00-uno:event:49c877ea13074998b99ede720c08e758--receipt.json  01-uno:event:11eb67d0b6864858961b8beae292740b--event.json  01-uno:event:11eb67d0b6864858961b8beae292740b--receipt.json  02-uno:event:43ca4c0d6ab144dcb574fcc20d4cd9af--event.json  02-uno:event:43ca4c0d6ab144dcb574fcc20d4cd9af--receipt.json
examples/manual_state/: agent.json  continuity_events.json
layer1/: README.md  block.go  consensus.go  go.mod  go.sum  main.go  node.go  round.go  vrf.go
runtime/: uno_runtime.py  uno_witness.py
specs/: README.md  data-model.v1.json  verify-minimal.v1.md
tests/: test_runtime.py
